--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "@react-native-community/cli": "^6.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.2",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-eject": "^0.1.2",
-    "react-native-gesture-handler": "^1.10.3"
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.7.2",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
