--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
-    "react-navigation-stack": "^2.10.4"
+    "react-native-sqlite-storage": "^5.0.0",
+    "react-navigation-stack": "^2.10.4",
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
@@ -31,7 +33,8 @@
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.66.2",
     "react-native-codegen": "^0.0.7",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "sequelize-cli": "^6.2.0"
   },
   "jest": {
     "preset": "react-native"
