--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@react-native-community/cli": "^6.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.2",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-eject": "^0.1.2",
