--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-eject": "^0.1.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.2",
+    "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
     "react-native-sqlite-storage": "^5.0.0",
