--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@react-native-community/cli": "^6.0.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/drawer": "^6.1.8",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
@@ -26,6 +28,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
     "react-native-sqlite-storage": "^5.0.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-navigation-stack": "^2.10.4",
     "sequelize": "^6.6.5"
   },
