--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^2.3.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-action-button": "^2.8.5",
     "react-native-eject": "^0.1.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.2",
