Tentando construir cadastrar adocao

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-action-button": "^2.8.5",
     "react-native-eject": "^0.1.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.10.1",
     "react-native-reanimated": "^2.2.2",
     "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^3.3.2",
