--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "react-native": "0.65.1",
     "react-native-action-button": "^2.8.5",
     "react-native-eject": "^0.1.2",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-paper": "^4.10.1",
     "react-native-reanimated": "^2.2.2",
     "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^3.3.2",
